--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiktok",
+  "name": "fundevclient",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,9 +8,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^8.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
