--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-scripts": "5.0.1",
     "scss": "^0.2.4",
     "socket.io-client": "^4.7.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.0-rc.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
